--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cordova-res": "^0.15.4",
     "history": "^4.9.0",
     "ionicons": "^6.0.3",
+    "moment": "^2.29.4",
     "native-run": "^1.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
