--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "moment": "^2.29.4",
     "native-run": "^1.7.1",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.8",
     "react-router": "^5.2.0",
